<resources>

    <string name="app_name">Airbnb</string>

    <!--    main login view-->
    <string name="login_explain">에어비앤비에 오신 것을 환영합니다.</string>
    <string name="singin_google_1">구글 계정으로 로그인</string>
    <string name="signin_account">계정 만들기</string>
    <string name="more">옵션 더 보기</string>
    <string name="login_other">\'계속하기\', \'계정만들기\'또는 \'옵션 더 보기\'를 탭하면 에어비앤비의 <u>서비스 약관</u>, <u>결제 서비스 약관</u>, <u>개인정보 처리방침</u>, <u>차별 금지 정책</u>에 동의하는 것입니다.</string>

    <string name="google">구글</string>
    <string name="facebook">페이스북</string>

    <string name="ip_inform">정보를 입력해주세요.</string>
    <string name="ip_signin">회원가입 및 로그인</string>
    <string name="first_name">이름(예: 길동)</string>
    <string name="last_name">성(예: 홍)</string>
    <string name="ip_name">이름(예:홍길동)</string>
    <string name="ip_email">이메일</string>
    <string name="ip_password">비밀번호</string>
    <string name="ip_phone_num">전화번호</string>


    <string name="login_airbnb">에어비앤비 로그인/회원가입</string>
    <string name="login_box_nation">국가/지역</string>
    <string name="login_box_phone">전화번호</string>
    <string name="inccorrect_phone_num">유효하지 않은 전화번호</string>
    <string name="cont">계속하기</string>
    <string name="signin_email">이메일로 로그인하기</string>
    <string name="signin_facebook">페이스북으로 로그인하기</string>
    <string name="signin_google_2">구글로 로그인하기</string>
    <string name="signin_apple">Apple로 로그인하기</string>


    <!--    navigation   -->
    <string name="search">검색</string>
    <string name="wishlist">위시리스트</string>
    <string name="travel">여행</string>
    <string name="messageBox">메시지함</string>
    <string name="login">로그인</string>

    <!--    search fragment    -->
    <string name="covid"><u>에어비앤비의 코로나19 대응 방안에 대한 최신 정보를 확인하세요.</u></string>
    <string name="search_view">어디로 여행가세요?</string>
    <string name="main_photo">에어비앤비가</string>
    <string name="main_photo2">여행지를 찾아드릴게요!</string>
    <string name="flex_search">유연한 검색</string>
    <string name="near">가까운 여행지 둘러보기</string>
    <string name="anywhere">어디에서나, 여행은 살아보는 거야!</string>
    <string name="hosting_start">호스팅 시작하기</string>
    <string name="hosting_start_content">집을 공유하여 부수입을 올리고 새로운 가능성을 만나세요.</string>
    <string name="hosting_more">자세히 알아보기</string>
    <string name="special">특별한 즐길 거리를 찾아보세요</string>
    <string name="information">최신 정보 확인하기</string>

    <!--    profile fragment    -->
    <string name="prof">프로필</string>
    <string name="prof_explain">로그인하고 다음 여행 계획을 세워보세요.</string>

    <!--    message fragment-->
    <string name="message_warn">메시지를 보려면 로그인하세요.</string>
    <string name="message_warn_conts">로그인하면 여기에 호스트가 보낸 메시지가 표시됩니다.</string>
    <string name="message">메세지</string>
    <string name="inform_tb">알림</string>

    <!--    wishlist fragment-->
    <string name="wish_explain">마음에 드는 항목을 발견하셨다면 하트 모양을 눌러 저장하세요. 여행을 함께 계획하는 일행이 있다면 초대하세요. 함께 원하는 항목을 저장하고 투표할 수 있습니다.</string>


    <string name="take_a_tour">둘러보기</string>>


    <!--    travel fragment-->
    <string name="travel_contents">다시 여행을 떠나실 준비가 되면 에어 비앤비에서 도와드리겠습니다.</string>


    <!--    login   -->
    <string name="sign_in"><u>회원 가입</u></string>

    <string name="agreement">\'계속하기\', \'계정만들기\'또는 \'옵션 더 보기\'를 탭하면 에어비앤비의 <u>서비스 약관</u>, <u>결제 서비스 약관</u>, <u>개인정보 처리방침</u>, <u>차별 금지 정책</u>에 동의하는 것입니다.</string>

    <!--    facebook login-->
    <string name="facebook_app_id">198756029100385</string>
    <string name="fb_login_protocol_scheme">fb198756029100385</string>

    <!--    logined profile-->
    <string name="see_prof">프로필 보기</string>
    <string name="account_manage">계정 관리</string>
    <string name="personal_inform">개인 정보</string>
    <string name="pay">결제 및 대금 수령</string>
    <string name="notice">알림</string>
    <string name="business_trip">출장 여행</string>
    <string name="hosting">호스팅</string>
    <string name="host_mode">호스팅 시작하기</string>
    <string name="exp_manage">숙소 관리</string>
    <string name="recom_cred">추천 및 여행 크레딧</string>
    <string name="invite_host">호스트 초대하기</string>
    <string name="invite_host_ex">호스트를 새로 추천할 때마다 ￦17,937의 크레딧을 받으세요.</string>
    <string name="support">지원</string>
    <string name="air_guide">에어비앤비 이용 방법</string>
    <string name="security_center">안전 센터</string>
    <string name="sec_center_ex">안전한 여행에 필요한 지원, 유용한 도구 및 정보를 제공해드립니다.</string>
    <string name="neighbor_support">에어비앤비 이웃 민원 지원에 연락하기</string>
    <string name="ns_ex">거주하고 계신 지역의 홈셰어링 활동에 대한 우려 사항을 에어비앤비에 알려주세요.</string>
    <string name="help">도움 요청</string>
    <string name="comment_op">의견 남기기</string>
    <string name="law">법률</string>
    <string name="tou">이용 약관</string>
    <string name="logout">로그아웃</string>

    <string name="version">버전 1.0.0.0(20180375)</string>


    <!--    개인정보 프로필-->
    <string name="edit_profile">개인정보 수정</string>
    <string name="save">저장</string>
    <string name="full_name">이름(예: 홍길동)</string>
    <string name="sex">성별</string>
    <string name="birth">생년월일</string>
    <string name="email_ip">이메일</string>
    <string name="num_p">전화번호</string>


    <string name="etc_inf">추가정보 (선택사항)</string>
    <string name="addr">거주지</string>
    <string name="addr_ex">예시 : 프랑스의 파리, 뉴욕의 브루클린, 일리노이 주의 시카고</string>
    <string name="job">직업</string>
    <string name="job_ex">예시 : 에어비앤비, 애플, 맥도날드</string>

    <!--    호스팅-->
    <string name="accom_name">숙소 이름</string>
    <string name="accom_addr">숙소 주소</string>
    <string name="fee">이용 요금</string>
    <string name="photo_up">사진 업로드</string>
    <string name="guests">게스트 수</string>
    <string name="type_accom">주택 종류</string>
    <string name="scope_of_use">이용 범위</string>
    <string name="descript">숙소 소개</string>

    <!--    호스팅__-->
    <string name="hosting_new">hosting</string>
    <string name="start_host">호스팅 시작하기</string>
    <string name="region_hosting">호스팅 지역</string>
    <string name="ip_search">검색어를 입력하시오</string>
    <string name="title_activity_hosting_detail">Map</string>
</resources>
