<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_search"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_search"
        android:enabled="true"
        android:title="@string/search"/>

    <item
        android:id="@+id/action_wishlist"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_wish_list"
        android:enabled="true"
        android:title="@string/wishlist"/>

    <item
        android:id="@+id/action_travel"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_travel"
        android:enabled="true"
        android:title="@string/travel"/>

    <item
        android:id="@+id/action_message"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_message"
        android:enabled="true"
        android:title="@string/message"/>

    <item
        android:id="@+id/action_profile"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_profile"
        android:enabled="true"
        android:title="@string/login"/>

</menu>