<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:orientation="vertical"
    android:background="@color/darkCyan">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/darkCyan">

        <ImageButton
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:id="@+id/quit_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_out"
            android:backgroundTint="@color/white"
            android:layout_gravity="left|center_vertical"/>

        <Button
            android:id="@+id/login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?selectableItemBackground"
            android:layout_alignParentRight="true"
            android:text="@string/login"
            android:textColor="@color/white"/>

    </RelativeLayout>

    <ImageView
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:src="@drawable/ic_travel"
        android:tint="@color/white"
        android:layout_marginLeft="20dp"/>

    <TextView
        android:id="@+id/introduce_bnb"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login_explain"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:layout_marginLeft="20dp"
        android:layout_marginBottom="10dp"/>

    <Button
        android:id="@+id/login_google"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@drawable/round_button"
        android:text="@string/singin_google_1"
        android:textSize="15sp"
        android:textColor="@color/darkCyan"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="17dp"
        android:drawableLeft="@drawable/ic_google"
        android:drawableTint="@color/darkCyan"
        android:paddingLeft="10dp"/>

    <Button
        android:id="@+id/create_account"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@drawable/round_outline_button"
        android:text="@string/signin_account"
        android:textSize="15sp"
        android:textColor="@color/white"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="20dp"/>

    <Button
        android:id="@+id/more"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:background="?selectableItemBackground"
        android:text="@string/more"
        android:gravity="start|center_vertical"
        android:textColor="@color/white"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login_other"
        android:textColor="@color/white"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"/>

</LinearLayout>