<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <TextView
        android:id="@+id/travel_top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:layout_marginLeft="17dp"
        android:text="@string/message"
        android:textSize="30dp"
        android:textColor="@color/black"/>

    <View
        android:id="@+id/line_travel"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="17dp"
        android:layout_marginRight="17dp"
        android:layout_marginTop="30dp"
        android:background="@color/gray"
        android:layout_below="@id/travel_top"/>

    <TextView
        android:id="@+id/not_log_in"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/message_warn"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:textSize="16dp"
        android:layout_marginLeft="17dp"
        android:layout_marginTop="30dp"
        android:layout_below="@id/line_travel"/>

    <TextView
        android:id="@+id/conts_travel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/message_warn_conts"
        android:layout_below="@+id/not_log_in"
        android:textSize="14dp"
        android:layout_marginLeft="17dp"
        android:layout_marginRight="17dp"/>

    <Button
        android:id="@+id/login_mes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:background="@drawable/round_pink_button"
        android:layout_marginLeft="17dp"
        android:layout_marginTop="12dp"
        android:layout_below="@id/conts_travel" />
</RelativeLayout>