<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <TextView
        android:id="@+id/wish_top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:layout_marginLeft="17dp"
        android:text="@string/wishlist"
        android:textSize="30sp"
        android:textColor="@color/black"/>

    <TextView
        android:id="@+id/wishlist_explain"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/wish_explain"
        android:textColor="@color/black"
        android:textSize="13sp"
        android:layout_marginTop="45dp"
        android:layout_marginLeft="17dp"
        android:layout_marginRight="17dp"
        android:layout_below="@+id/wish_top"/>

    <Button
        android:id="@+id/finding"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="45dp"
        android:layout_below="@+id/wishlist_explain"
        android:background="?selectableItemBackground"
        android:text="@string/take_a_tour"
        android:gravity="start|center_vertical"
        android:textColor="@color/darkCyan"
        android:paddingLeft="17dp"/>




</RelativeLayout>