<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PhotoProfileActivity"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="17dp"
        android:layout_marginVertical="10dp">

        <ImageButton
            android:id="@+id/quit_photo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_back_arrow"
            android:layout_centerVertical="true"
            android:layout_alignParentStart="true"
            android:layout_marginBottom="10dp"/>

        <Button
            android:id="@+id/save_photo_prof"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="저장"
            android:minWidth="0dp"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:background="?selectableItemBackground"
            android:layout_centerVertical="true"
            android:layout_alignParentEnd="true"/>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/addphoto_btn_upload"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:clickable="true"
        android:background="@color/gray"
        android:focusable="true">
        <ImageView
            android:id="@+id/addphoto_img"
            android:layout_width="300dp"
            android:layout_height="300dp"
            android:layout_centerInParent="true"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:src="@drawable/ic_camera"
            android:layout_marginHorizontal="10dp"
            android:layout_marginVertical="10dp"/>
    </RelativeLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginVertical="10dp"
        android:text="@string/etc_inf"
        android:textColor="@color/black"
        android:textStyle="bold"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="10dp"
        android:text="@string/addr"
        android:textColor="@color/black"/>


    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp">
        <EditText
            android:id="@+id/address_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/addr_ex"
            android:textColorHint="@color/black"/>
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/addr_edittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="10dp"
        android:text="@string/job"
        android:textColor="@color/black"/>


    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp">
        <EditText
            android:id="@+id/job_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/job_ex"
            android:textColorHint="@color/black"/>
    </com.google.android.material.textfield.TextInputLayout>
</LinearLayout>